@@ -47,18 +47,18 @@ EBUILD emacs-18.59-r3.ebuild 2465 RMD160 87dafe0fcdc9631503d860a1151acd946ce14ab
 MD5 cd9890c79aa5fb5e92b6630bc206b199 emacs-18.59-r3.ebuild 2465
 RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba emacs-18.59-r3.ebuild 2465
 SHA256 910740f3502ac9652df9a2ddb5df720c2fff500354a1b4bb3cf4916422354e52 emacs-18.59-r3.ebuild 2465
-EBUILD emacs-21.4-r10.ebuild 4805 RMD160 488864200d5d58a5da0af3958aca656909121624 SHA1 7739ff72ea234a3306060094caa6138f3c6ff977 SHA256 a8ad7ba7823557005ddf21320d8b1d169fd37c1bfcc0143a0eabf105883ba103
-MD5 72557f9a4870a4daa7157c434593531e emacs-21.4-r10.ebuild 4805
-RMD160 488864200d5d58a5da0af3958aca656909121624 emacs-21.4-r10.ebuild 4805
-SHA256 a8ad7ba7823557005ddf21320d8b1d169fd37c1bfcc0143a0eabf105883ba103 emacs-21.4-r10.ebuild 4805
+EBUILD emacs-21.4-r10.ebuild 4924 RMD160 f580c765ff5f83395515cceb6b572d4a14f18276 SHA1 19fcf4ff2129a6bd5f92e8fa57eb795267d69ed2 SHA256 b3217487824bcf29832af753dd528ee2aab0f1e7e0a55a5fca772046ad604b9f
+MD5 93958a02292db0daec7fb3ac69482609 emacs-21.4-r10.ebuild 4924
+RMD160 f580c765ff5f83395515cceb6b572d4a14f18276 emacs-21.4-r10.ebuild 4924
+SHA256 b3217487824bcf29832af753dd528ee2aab0f1e7e0a55a5fca772046ad604b9f emacs-21.4-r10.ebuild 4924
 EBUILD emacs-21.4-r9.ebuild 4843 RMD160 c235b41102c152c6d9f76113242e314ca1b04be0 SHA1 e020cdecb19d9ebf5656ecc4192a12b94a20bed8 SHA256 35e1af0dcd06f40cc99975b125cf765b629032761c8b746324eb23065e1b4729
 MD5 4f9c26bcae9dcbdd7087baa3a3e7f128 emacs-21.4-r9.ebuild 4843
 RMD160 c235b41102c152c6d9f76113242e314ca1b04be0 emacs-21.4-r9.ebuild 4843
 SHA256 35e1af0dcd06f40cc99975b125cf765b629032761c8b746324eb23065e1b4729 emacs-21.4-r9.ebuild 4843
-MISC ChangeLog 1888 RMD160 9ef01ab0938fa145cd7f0891679a5e573c876726 SHA1 2013c5f7bd6f44ad5d8f52068f0a2395f68730a7 SHA256 8a0196093298ecc85581320cbd9549e260a84fbb0813f113e7bb0a4b711193b7
-MD5 6143909fb661aa32e54abce48e9f8063 ChangeLog 1888
-RMD160 9ef01ab0938fa145cd7f0891679a5e573c876726 ChangeLog 1888
-SHA256 8a0196093298ecc85581320cbd9549e260a84fbb0813f113e7bb0a4b711193b7 ChangeLog 1888
+MISC ChangeLog 2009 RMD160 105b6db1253b0114343f27bbf3fee9e7b8f22341 SHA1 438cd32ed980c63125434ffcba472d741f0ee2d8 SHA256 6842719a1730598e524bff21e21350cf72326288f4854207be98da47b1b73370
+MD5 5fb15242df0bed031b8a997a1acbb52d ChangeLog 2009
+RMD160 105b6db1253b0114343f27bbf3fee9e7b8f22341 ChangeLog 2009
+SHA256 6842719a1730598e524bff21e21350cf72326288f4854207be98da47b1b73370 ChangeLog 2009
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
