@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-21.4-r10.ebuild:
+  Install emacsclient.1 man page (#165466).
+
   19 Mar 2007; Christian Faulhammer <opfer@gentoo.org> emacs-21.4-r9.ebuild:
   add dependency to eselect module
 
